--- a/SIENI/SIENI-web/src/main/webapp/view/formato/gestionAnioEscolar/matricula/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/formato/gestionAnioEscolar/matricula/index.xhtml
@@ -26,12 +26,16 @@
                                  rowsPerPageTemplate="5,10,15"
                                  reflow="true">
                         <p:column headerText="Carnet" filterBy="#{car.description}" filterMatchMode="contains" filterable="true">
+                            #{formatoPantallas.carnet}
                         </p:column>
                         <p:column headerText="Nombre" filterBy="#{car.description}" filterMatchMode="contains" filterable="true">
+                            #{formatoPantallas.campo300}
                         </p:column>
                         <p:column headerText="Grado" filterBy="#{car.description}" filterMatchMode="contains" filterable="true">
+                            #{formatoPantallas.campo15}
                         </p:column>
                         <p:column headerText="Sección" filterBy="#{car.description}" filterMatchMode="contains" filterable="true">
+                            #{formatoPantallas.campo15}
                         </p:column>
                         <p:column headerText="Acciones">
                             <!--                            <i class="icon-users Fs25 Red" style="cursor: pointer" title="Gestionar Docentes"></i>
@@ -53,25 +57,25 @@
                     <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>                    
                     <div class="EmptyBox20"></div>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel for="carnet" value="Carnet: " class=" Responsive"></p:outputLabel>
-                        <p:inputText id="carnet"></p:inputText>
-                        <p:outputLabel for="nombreExp" value="Nombre: " class=" Responsive"></p:outputLabel>
-                        <p:selectOneMenu id="nombreExp" filter="true" filterMatchMode="contains">
-                            <f:selectItem itemLabel="Mauricio Amilcar"></f:selectItem>
-                            <f:selectItem itemLabel="Rafael Antonio"></f:selectItem>
-                            <f:selectItem itemLabel="Alberto Daniel"></f:selectItem>
+                        <p:outputLabel value="Carnet: " class=" Responsive"></p:outputLabel>
+                        <p:inputText value="#{formatoPantallas.carnet}"></p:inputText>
+                        <p:outputLabel  value="Nombre: " class=" Responsive"></p:outputLabel>
+                        <p:selectOneMenu  filter="true" filterMatchMode="contains">
+                            <f:selectItem itemValue="0" itemLabel="#{formatoPantallas.campo300}"></f:selectItem>
+                            <f:selectItem itemValue="1" itemLabel="Rafael Antonio"></f:selectItem>
+                            <f:selectItem itemValue="2" itemLabel="Alberto Daniel"></f:selectItem>
                         </p:selectOneMenu>
-                        <p:outputLabel for="grado" value="Grado: " class=" Responsive" ></p:outputLabel>
-                        <p:selectOneMenu id="grado" filter="true" filterMatchMode="contains">
-                            <f:selectItem itemLabel="7°"></f:selectItem>
-                            <f:selectItem itemLabel="8°"></f:selectItem>
-                            <f:selectItem itemLabel="9°"></f:selectItem>
+                        <p:outputLabel value="Grado: " class=" Responsive" ></p:outputLabel>
+                        <p:selectOneMenu  filter="true" filterMatchMode="contains">
+                            <f:selectItem itemValue="0" itemLabel="#{formatoPantallas.campo15}"></f:selectItem>
+                            <f:selectItem itemValue="1" itemLabel="8°"></f:selectItem>
+                            <f:selectItem itemValue="2" itemLabel="9°"></f:selectItem>
                         </p:selectOneMenu>
-                        <p:outputLabel for="seccion" value="Sección del grado: " class="  Responsive"></p:outputLabel>
-                        <p:selectOneMenu id="seccion">
-                            <f:selectItem itemLabel="A"></f:selectItem>
-                            <f:selectItem itemLabel="B"></f:selectItem>
-                            <f:selectItem itemLabel="C"></f:selectItem>
+                        <p:outputLabel  value="Sección del grado: " class="  Responsive"></p:outputLabel>
+                        <p:selectOneMenu >
+                            <f:selectItem itemValue="0" itemLabel="#{formatoPantallas.campo15}"></f:selectItem>
+                            <f:selectItem itemValue="1" itemLabel="B"></f:selectItem>
+                            <f:selectItem itemValue="2" itemLabel="C"></f:selectItem>
                         </p:selectOneMenu>
                     </p:panelGrid>
                     <div class="EmptyBox20"></div>
@@ -99,25 +103,25 @@
                     <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
                     <div class="EmptyBox20"></div>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel for="m_carnet" value="Carnet: " class=" Responsive"></p:outputLabel>
-                        <p:inputText id="m_carnet"></p:inputText>
-                        <p:outputLabel for="m_nombreExp" value="Nombre: " class=" Responsive"></p:outputLabel>
-                        <p:selectOneMenu id="m_nombreExp" filter="true" filterMatchMode="contains">
-                            <f:selectItem itemLabel="Mauricio Amilcar"></f:selectItem>
-                            <f:selectItem itemLabel="Rafael Antonio"></f:selectItem>
-                            <f:selectItem itemLabel="Alberto Daniel"></f:selectItem>
+                        <p:outputLabel value="Carnet: " class=" Responsive"></p:outputLabel>
+                        <p:inputText value="#{formatoPantallas.carnet}"></p:inputText>
+                        <p:outputLabel  value="Nombre: " class=" Responsive"></p:outputLabel>
+                        <p:selectOneMenu  filter="true" filterMatchMode="contains">
+                            <f:selectItem itemValue="0" itemLabel="#{formatoPantallas.campo300}"></f:selectItem>
+                            <f:selectItem itemValue="1" itemLabel="Rafael Antonio"></f:selectItem>
+                            <f:selectItem itemValue="2" itemLabel="Alberto Daniel"></f:selectItem>
                         </p:selectOneMenu>
-                        <p:outputLabel for="m_grado" value="Grado: " class=" Responsive" ></p:outputLabel>
-                        <p:selectOneMenu id="m_grado" filter="true" filterMatchMode="contains">
-                            <f:selectItem itemLabel="7°"></f:selectItem>
-                            <f:selectItem itemLabel="8°"></f:selectItem>
-                            <f:selectItem itemLabel="9°"></f:selectItem>
+                        <p:outputLabel value="Grado: " class=" Responsive" ></p:outputLabel>
+                        <p:selectOneMenu  filter="true" filterMatchMode="contains">
+                            <f:selectItem itemValue="0" itemLabel="#{formatoPantallas.campo15}"></f:selectItem>
+                            <f:selectItem itemValue="1" itemLabel="8°"></f:selectItem>
+                            <f:selectItem itemValue="2" itemLabel="9°"></f:selectItem>
                         </p:selectOneMenu>
-                        <p:outputLabel for="m_seccion" value="Sección del grado: " class="  Responsive"></p:outputLabel>
-                        <p:selectOneMenu id="m_seccion">
-                            <f:selectItem itemLabel="A"></f:selectItem>
-                            <f:selectItem itemLabel="B"></f:selectItem>
-                            <f:selectItem itemLabel="C"></f:selectItem>
+                        <p:outputLabel  value="Sección del grado: " class="  Responsive"></p:outputLabel>
+                        <p:selectOneMenu >
+                            <f:selectItem itemValue="0" itemLabel="#{formatoPantallas.campo15}"></f:selectItem>
+                            <f:selectItem itemValue="1" itemLabel="B"></f:selectItem>
+                            <f:selectItem itemValue="2" itemLabel="C"></f:selectItem>
                         </p:selectOneMenu>
                     </p:panelGrid>
                     <div class="EmptyBox20"></div>
