--- a/SIENI/SIENI-web/src/main/webapp/view/formato/gestionCurso/gestionArchivosMultimedia/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/formato/gestionCurso/gestionArchivosMultimedia/index.xhtml
@@ -20,19 +20,20 @@
                         <p:outputLabel value="Esta ayuda sirve un monton"/>
                     </p:dialog>
                     <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
+                    <div class="EmptyBox20"></div>
                     <p:dataTable rows="10" var="car" value="#{clasesForm.plantillas}" 
                                  paginator="true"
                                  paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                                  rowsPerPageTemplate="5,10,15"
                                  reflow="true">
                         <p:column headerText="Nombre" filterBy="#{car.description}" filterable="true" filterMatchMode="contains">
-
+                            #{formatoPantallas.campo100}
                         </p:column>
                         <p:column headerText="Estado" filterBy="#{car.description}" filterable="true" filterMatchMode="contains">
-
+                            #{formatoPantallas.campo15}
                         </p:column>
                         <p:column headerText="Tipo" filterBy="#{car.description}" filterable="true" filterMatchMode="contains">
-
+                            #{formatoPantallas.campo15}
                         </p:column>
                         <p:column headerText="Acciones">
                             <i class="icon-list Fs25 Red" style="cursor: pointer" title="Ver Archivo Multimedia"></i>
@@ -53,23 +54,23 @@
                     <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
                     <div class="EmptyBox20"></div>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel for="nombre" value="Nombre: " class=" Responsive"></p:outputLabel>
-                        <p:inputText id="nombre" class=" Responsive" value="#{archivosMultimediaForm.nombre}"></p:inputText>
-                        <p:outputLabel for="estado" value="Estado: " class=" Responsive"></p:outputLabel>
-                        <p:selectOneMenu id="estado" class=" Responsive" value="#{archivosMultimediaForm.estado}">
-                            <f:selectItem itemValue ="1" itemLabel="Disponible"/>
+                        <p:outputLabel  value="Nombre: " class=" Responsive"></p:outputLabel>
+                        <p:inputText value="#{formatoPantallas.campo100}"></p:inputText>
+                        <p:outputLabel  value="Estado: " class=" Responsive"></p:outputLabel>
+                        <p:selectOneMenu  class=" Responsive" value="#{archivosMultimediaForm.estado}">
+                            <f:selectItem itemValue ="1" itemLabel="#{formatoPantallas.campo15}"/>
                             <f:selectItem itemValue="0" itemLabel="No Disponible"/>
                         </p:selectOneMenu>
                     </p:panelGrid>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel for="tipo" value="Tipo: " class=" Responsive"></p:outputLabel>
+                        <p:outputLabel  value="Tipo: " class=" Responsive"></p:outputLabel>
                         <p:selectOneMenu id="tipo" class=" Responsive" value="#{archivosMultimediaForm.tipo}">
-                            <f:selectItem itemValue ="0" itemLabel="Audio"/>
+                            <f:selectItem itemValue ="0" itemLabel="#{formatoPantallas.campo15}"/>
                             <f:selectItem itemValue ="1" itemLabel="Video"/>
                             <f:selectItem itemValue ="2" itemLabel="Imagen"/>
                         </p:selectOneMenu>
-                        <p:outputLabel for="archivo" value="Archivo: " class=" Responsive"></p:outputLabel>
-                        <p:fileUpload id="archivo" label="Buscar" cancelLabel="cancelar" uploadLabel="Subir archivo" multiple="false" mode="advanced" skinSimple="true" allowTypes="/(\.|\/)(jpg)$/" class="Container40 Responsive" value="#{archivosMultimediaForm.archivo}" >
+                        <p:outputLabel  value="Archivo: " class=" Responsive"></p:outputLabel>
+                        <p:fileUpload label="Buscar" cancelLabel="cancelar" uploadLabel="Subir archivo" multiple="false" mode="advanced" skinSimple="true" allowTypes="/(\.|\/)(jpg)$/" class="Container40 Responsive" value="#{archivosMultimediaForm.archivo}" >
                         </p:fileUpload>  
                     </p:panelGrid>
                     <div class="EmptyBox20"></div>
@@ -97,23 +98,23 @@
                     <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
                     <div class="EmptyBox20"></div>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel for="m_nombre" value="Nombre: " class=" Responsive"></p:outputLabel>
-                        <p:inputText id="m_nombre" class=" Responsive" value="#{archivosMultimediaForm.nombre}"></p:inputText>
-                        <p:outputLabel for="m_estado" value="Estado: " class=" Responsive"></p:outputLabel>
-                        <p:selectOneMenu id="m_estado" class=" Responsive" value="#{archivosMultimediaForm.estado}">
-                            <f:selectItem itemValue ="1" itemLabel="Disponible"/>
+                        <p:outputLabel  value="Nombre: " class=" Responsive"></p:outputLabel>
+                        <p:inputText value="#{formatoPantallas.campo100}"></p:inputText>
+                        <p:outputLabel  value="Estado: " class=" Responsive"></p:outputLabel>
+                        <p:selectOneMenu  class=" Responsive" value="#{archivosMultimediaForm.estado}">
+                            <f:selectItem itemValue ="1" itemLabel="#{formatoPantallas.campo15}"/>
                             <f:selectItem itemValue="0" itemLabel="No Disponible"/>
                         </p:selectOneMenu>
                     </p:panelGrid>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel for="m_tipo" value="Tipo: " class=" Responsive"></p:outputLabel>
-                        <p:selectOneMenu id="m_tipo" class=" Responsive" value="#{archivosMultimediaForm.tipo}">
-                            <f:selectItem itemValue ="0" itemLabel="Audio"/>
+                        <p:outputLabel  value="Tipo: " class=" Responsive"></p:outputLabel>
+                        <p:selectOneMenu id="tipo" class=" Responsive" value="#{archivosMultimediaForm.tipo}">
+                            <f:selectItem itemValue ="0" itemLabel="#{formatoPantallas.campo15}"/>
                             <f:selectItem itemValue ="1" itemLabel="Video"/>
                             <f:selectItem itemValue ="2" itemLabel="Imagen"/>
                         </p:selectOneMenu>
-                        <p:outputLabel for="m_archivo" value="Archivo: " class=" Responsive"></p:outputLabel>
-                        <p:fileUpload id="m_archivo" label="Buscar" cancelLabel="cancelar" uploadLabel="Subir archivo" multiple="false" mode="advanced" skinSimple="true" allowTypes="/(\.|\/)(jpg)$/" class="Container40 Responsive" value="#{archivosMultimediaForm.archivo}" >
+                        <p:outputLabel  value="Archivo: " class=" Responsive"></p:outputLabel>
+                        <p:fileUpload label="Buscar" cancelLabel="cancelar" uploadLabel="Subir archivo" multiple="false" mode="advanced" skinSimple="true" allowTypes="/(\.|\/)(jpg)$/" class="Container40 Responsive" value="#{archivosMultimediaForm.archivo}" >
                         </p:fileUpload>  
                     </p:panelGrid>
                     <div class="EmptyBox20"></div>
